# openclaw

cli-rust/: Cargo.toml  README.md
cli-rust/src/: main.rs
cli-rust/src/agent/: context.rs  images.rs  memory.rs  mod.rs  prompt.rs  session.rs  types.rs
cli-rust/src/cli/: mod.rs
cli-rust/src/config/: mod.rs  schema.rs
cli-rust/src/llm/: anthropic.rs  mod.rs  models.rs  ollama.rs  openai.rs  streaming.rs
cli-rust/src/tools/: bash.rs  file_ops.rs  mod.rs  policy.rs  web_fetch.rs
cli-zig/: build.zig  build.zig.zon
cli-zig/src/: agent.zig  cli.zig  config.zig  main.zig  session.zig  types.zig
cli-zig/src/llm/: anthropic.zig  ollama.zig  openai.zig  streaming.zig
cli-zig/src/tools/: bash.zig  file_ops.zig  registry.zig
per_doc/: 00-overview.md  01-gateway.md  02-channels-and-routing.md  03-agents-and-ai-runtime.md  04-configuration.md  05-cli.md  06-plugins-and-extensions.md  07-web-ui.md  08-native-apps.md  09-media-and-content.md  10-infrastructure.md  11-testing-and-ci.md  12-security.md  13-data-flow.md
src/discord/: send.outbound.ts  send.shared.ts
src/discord/monitor/: exec-approvals.test.ts  exec-approvals.ts
src/infra/outbound/: message-action-runner.ts
