[package]
name = "openclaw-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "AI agent CLI"

[[bin]]
name = "openclaw-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
ctrlc = "3"
dirs = "6"
rustyline = "15"
bytes = "1"
futures-util = "0.3"
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "io-std", "sync", "signal", "process", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = "s"
panic = "abort"
